# yt-tool

./: README.md  issue.md  pyproject.toml
.superpowers/brainstorm/34871-1774852864/content/: channel-browser.html  filter-menu.html  playlist-expand.html  screen-flow.html
.superpowers/brainstorm/34871-1774852864/state/: server-stopped
docs/superpowers/plans/: 2026-03-30-tui-implementation.md  2026-03-30-tui-redesign.md
docs/superpowers/specs/: 2026-03-30-tui-design.md  2026-03-30-tui-redesign.md
tests/: test_fetch_config.py  test_fetch_orchestration.py  test_vtt_parser.py
yt_tool/: cli.py  core.py  tui.py
ytscript/: cli.py  core.py  tui.py
