[project]
name = "ytscript"
version = "0.2.0"
description = "CLI for YouTube transcripts, audio, summaries, channel/playlist listing, and search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "click",
    "textual",
    "youtube-transcript-api",
    "yt-dlp",
]

[project.optional-dependencies]
summary = ["anthropic"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
ytscript = "ytscript.cli:main"
ytscript-tui = "ytscript.tui:main"
