[project]
name = "yt-tool"
version = "0.3.0"
description = "One-stop YouTube CLI — transcripts, audio (MP3/WAV/...), video (MP4), summaries, channel/playlist listing, search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "click",
    "textual",
    "youtube-transcript-api",
    "yt-dlp",
]

[project.optional-dependencies]
summary = ["anthropic"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
yt-tool = "yt_tool.cli:main"
yt-tool-tui = "yt_tool.tui:main"
