[project]
name = "yt-tool"
version = "0.4.0"
description = "One-stop YouTube CLI — transcripts, audio (MP3/WAV/...), video (MP4), summaries, channel/playlist listing, search"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "click",
    "textual",
    "youtube-transcript-api",
    "yt-dlp",
    "curl-cffi>=0.10,<0.15",
]

[project.optional-dependencies]
summary = ["anthropic"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
yt-tool = "yt_tool.cli:main"
yt-tool-tui = "yt_tool.tui:main"
